--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="This is my description.">
+    <meta property="og:image" content="OG_image.png">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon2/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon2/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon2/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon2/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon2/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon2/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon2/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon2/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon2/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon2/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon2/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon2/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon2/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <h1>Hello World</h1>
