Homework - About Me

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Taiwo Joseph Afolabi</h1>
+    <p>Love Circular - Software Engineering Bootcamp (SEB3)</p>
     <a href="/about.html">About Me - Homework</a>
 </body>
 </html>
