Homework - About Me

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 <body>
     <h1>Taiwo Joseph Afolabi</h1>
     <p>Love Circular - Software Engineering Bootcamp (SEB3)</p>
-    <a href="about.html">About Me - Homework</a>
+    <a href="/about/about.html">About Me - Homework</a>
 </body>
 </html>
