--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,7 @@
    </p>
    <ul>
     <li>
-        <a href="www.instagram.com/allthingsjta" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/allthingsjta" target="_blank">Instagram</a>
     </li>
     <li>
         <a href="https://www.linkedin.com/in/taiwojosephafolabi/" target="_blank">LinkedIn</a>
