--- a/about/index.html
+++ b/about/index.html
@@ -1,68 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="description" content="This is my description.">
-    <meta property="og:image" content="OG_image.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="description" content="This is my description." />
+    <meta property="og:image" content="OG_image.png" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="../favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
-    <link rel="manifest" href="../favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="../favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-</head>
-<body>
-   <h1>About Me</h1>
-   <img src="../JT.jpg" alt="Profile Picture" width="100" height="100"/>
-   <h2>Bio</h2>
-    <p>Hey! I'm Joseph Afolabi. I am a 21 year-old creative from London.
-        <br>
-        I am a Chemical Engineering student. I study at Aston University in Birmingham, UK.
-        <br>
-        I am also studying to become a Software Engineer. I am currently completing Love Circular's Software Engineering Bootcamp.
-    </p>
-   <h2>Hobbies & Favourite Things</h2>
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="../favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="../favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="../favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="../favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="../favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="../favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="../favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="../favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="../favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="../favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="../favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <h1>About Me</h1>
+    <img id="profile" src="../JT.jpg" alt="Profile Picture" />
+    <h2>Bio</h2>
     <p>
-        Fashion, Skincare & Self-care
-        <br>
-        Travelling & Exploring
-        <br>
-        Rollerskating & Ice Skating
-        <br>
-        Anything Salted Caramel flavoured
-        <br>
-        Sci-Fi, Thriller and Horror films
+      Hey! I'm Joseph Afolabi. I am a 21 year-old creative from London.
+      <br />
+      I am a Chemical Engineering student. I study at Aston University in
+      Birmingham, UK.
+      <br />
+      I am also studying to become a Software Engineer. I am currently
+      completing Love Circular's Software Engineering Bootcamp.
     </p>
-   <h2>Socials</h2>
-   <p>
-        Here are my socials. Connect with me!
-   </p>
-   <ul>
-    <li>
-        <a href="https://www.instagram.com/allthingsjta" target="_blank">Instagram</a>
-    </li>
-    <li>
-        <a href="https://www.linkedin.com/in/taiwojosephafolabi/" target="_blank">LinkedIn</a>
-    </li>
-    <li>
-        <a href="https://github.com/taiwojosephafolabi" target="_blank">GitHub</a>
-    </li>
-   </ul>
-   <footer>
-    <p>Taiwo Joseph Afolabi &copy; 2022</p>
-   </footer>
-</body>
+    <h2>Hobbies & Favourite Things</h2>
+    <p>
+      Fashion, Skincare & Self-care
+      <br />
+      Travelling & Exploring
+      <br />
+      Rollerskating & Ice Skating
+      <br />
+      Anything Salted Caramel flavoured
+      <br />
+      Sci-Fi, Thriller and Horror films
+    </p>
+    <h2>Socials</h2>
+    <p>Here are my socials. Connect with me!</p>
+    <ul id="socials">
+      <li>
+        <a href="https://www.instagram.com/allthingsjta" target="_blank"
+          >Instagram</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.linkedin.com/in/taiwojosephafolabi/"
+          target="_blank"
+          >LinkedIn</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/taiwojosephafolabi" target="_blank"
+          >GitHub</a
+        >
+      </li>
+    </ul>
+    <footer>
+      <p>Taiwo Joseph Afolabi &copy; 2022</p>
+    </footer>
+  </body>
 </html>
