--- a/about/index.html
+++ b/about/index.html
@@ -109,6 +109,18 @@
       <br />
       Sci-Fi, Thriller and Horror films
     </p>
+    <h2>Blog</h2>
+    <div class="blog">
+      <div class="blog-post">
+        <img id="blog-image" src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" >
+        <button id="favourite" onclick="favouriteButton()">Favourite</button>
+      </div>
+      <div class="blog-comment">
+        <label for="comment" id="comment-label">Comments:</label>
+        <textarea id="comment" name="comment" rows="5" cols="33"></textarea></textarea>
+        <button id="submit" onclick="submitButton()">Submit</button>
+      </div>
+    </div>
     <h2>Socials</h2>
     <p>Here are my socials. Connect with me!</p>
     <ul id="socials">
@@ -133,5 +145,6 @@
     <footer>
       <p>Taiwo Joseph Afolabi &copy; 2022</p>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
