--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
     <h1>Taiwo Joseph Afolabi</h1>
     <p>Love Circular - Software Engineering Bootcamp (SEB3)</p>
     <a href="../my-first-webpage/about/index.html">About Me - Homework</a>
+    <br>
+    <a href="../my-first-webpage/javascript/index.html">JavaScript - Homework</a>
 </body>
 </html>
