--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,7 +5,7 @@
     <meta property="og:image" content="OG_image.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me</title>
+    <title>Blog</title>
     <link
       rel="apple-touch-icon"
       sizes="57x57"
