--- a/javascript/index.html
+++ b/javascript/index.html
@@ -85,40 +85,52 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>About Me</h1>
-    <img id="profile" src="../JT.jpg" alt="Profile Picture" />
-    <h2>Bio</h2>
-    <p>
-      Hey! I'm Joseph Afolabi. I am a 21 year-old creative from London.
-      <br />
-      I am a Chemical Engineering student. I study at Aston University in
-      Birmingham, UK.
-      <br />
-      I am also studying to become a Software Engineer. I am currently
-      completing Love Circular's Software Engineering Bootcamp.
-    </p>
-    <h2>Hobbies & Favourite Things</h2>
-    <p>
-      Fashion, Skincare & Self-care
-      <br />
-      Travelling & Exploring
-      <br />
-      Rollerskating & Ice Skating
-      <br />
-      Anything Salted Caramel flavoured
-      <br />
-      Sci-Fi, Thriller and Horror films
-    </p>
-    <h2>Blog</h2>
-    <div class="blog">
-      <div class="blog-post">
-        <img id="blog-image" src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" >
-        <button id="favourite" onclick="favouriteButton()">Favourite</button>
+    <h1>Blog</h1>
+    <h2>Welcome to my blog!</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident ratione dolorum cumque fugiat in vel ex. Error libero pariatur adipisci. Aut dolore fuga reiciendis blanditiis tenetur nihil ab nesciunt vel.</p>
+    
+    <h2>Recent Blog Posts</h2>
+    <div class="blog" >
+      <div class="column left">
+        <div class="blog-post" class="column left">
+          <img id="blog-image" src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" >
+          <button id="favourite" onclick="favouriteButton()">Favourite</button>
+        </div>
       </div>
-      <div class="blog-comment">
-        <label for="comment" id="comment-label">Comments:</label>
-        <textarea id="comment" name="comment" rows="5" cols="33"></textarea></textarea>
-        <button id="submit" onclick="submitButton()">Submit</button>
+      <div class="column middle">
+        <div class="description">
+          <h3>Blog Post Title</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias modi eius consequatur error atque. Magnam quos ex quaerat tempora veniam laboriosam! Illo nam dolorum repudiandae fugit quis impedit qui incidunt?</p>
+        </div>
+      </div>
+      <div class="column right">
+        <div class="blog-comment" >
+          <label for="comment" id="comment-label">Comments:</label>
+          <textarea id="comment" name="comment" rows="5" cols="33"></textarea></textarea>
+          <button id="submit" onclick="submitButton()">Submit</button>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="blog" >
+      <div class="column left">
+        <div class="blog-post" class="column left">
+          <img id="blog-image" src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" >
+          <button id="favourite" onclick="favouriteButton()">Favourite</button>
+        </div>
+      </div>
+      <div class="column middle">
+        <div class="description">
+          <h3>Blog Post Title</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias modi eius consequatur error atque. Magnam quos ex quaerat tempora veniam laboriosam! Illo nam dolorum repudiandae fugit quis impedit qui incidunt?</p>
+        </div>
+      </div>
+      <div class="column right">
+        <div class="blog-comment" >
+          <label for="comment" id="comment-label">Comments:</label>
+          <textarea id="comment" name="comment" rows="5" cols="33"></textarea></textarea>
+          <button id="submit" onclick="submitButton()">Submit</button>
+        </div>
       </div>
     </div>
     <h2>Socials</h2>
