--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <p>Love Circular - Software Engineering Bootcamp (SEB3)</p>
     <a href="../my-first-webpage/about/index.html">About Me - Homework</a>
     <br>
-    <a href="../my-first-webpage/blog/index.html">JavaScript - Homework</a>
+    <a href="../my-first-webpage/blog/index.html">Blog - Homework</a>
 </body>
 </html>
